--- a/notebook/ct_video.ipynb
+++ b/notebook/ct_video.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Generate CT slice video\n",
-    "Different windows with optional segmentations"
+    "Lung and abdomen windows with optional segmentations"
    ]
   },
   {
@@ -27,85 +27,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "import os\n",
+    "from concurrent.futures import ThreadPoolExecutor, wait\n",
     "from pathlib import Path\n",
-    "from tqdm import tqdm\n",
     "\n",
+    "import arrow\n",
     "import nibabel as nib\n",
-    "import SimpleITK as sitk\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import SimpleITK as sitk\n",
+    "\n",
+    "from tqdm import tqdm\n",
     "from skimage import measure\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from video_utils import create_mp4\n",
     "from plot_utils import plot_contours, plot_text, plot_slice_full, get_slice_range, plot_and_save"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "656e202a-8241-46a1-97ac-7f0fb8484a0a",
+   "id": "37ec9b5f-87c9-42bc-8722-4bab0b62f5ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load CT\n",
-    "ct_folder = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/dataset B_lymphoma/PETCT_1fc35d02da/08-09-2003-NA-PET-CT Ganzkoerper  primaer mit KM-36800/\")\n",
-    "ct_folder = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/dataset B_lymphoma/PETCT_0f44cec2e6/09-07-2003-NA-PET-CT Ganzkoerper  primaer mit KM-99224/\")\n",
+    "dataset_folder = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/dataset B_lymphoma\")\n",
+    "seg_folder     = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/SEG_Lymphoma_B_Rifki-selected\")\n",
+    "frames_folder  = Path(\"../frames\")\n",
+    "output_folder  = Path(\"../outputs\")\n",
     "\n",
-    "ct_file = \"CT.nii.gz\"\n",
-    "ct_img = sitk.ReadImage(ct_folder / ct_file)\n",
-    "\n",
-    "# Load segmentations\n",
-    "seg_folder = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/SEG_Lymphoma_B_Rifki-selected/\")\n",
-    "seg_file = \"SEG_1fc35d02da.nii.gz.nii.seg.nrrd\"\n",
-    "seg_file = \"SEG_0f44cec2e6.nii.gz.nii.seg.nrrd\"\n",
-    "\n",
-    "seg_img = sitk.ReadImage(seg_folder / seg_file)\n",
-    "seg_img = sitk.Resample(seg_img, ct_img, sitk.Transform(), sitk.sitkNearestNeighbor, 0.0, seg_img.GetPixelID())\n",
-    "seg_data = sitk.GetArrayFromImage(seg_img)\n",
-    "\n",
-    "# Get arrays\n",
-    "ct_array = sitk.GetArrayFromImage(ct_img)\n",
-    "seg_array = sitk.GetArrayFromImage(seg_img)"
+    "ct_filename = \"CT.nii.gz\"\n",
+    "ct_paths = list(dataset_folder.glob(f\"*/*/{ct_filename}\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f1556f6-ad16-4037-84f3-a4dc3ee38936",
+   "id": "a965c251-1679-44aa-8b57-a47e6ec06ab1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "slice_range, n_slices = get_slice_range(seg_array)"
+    "dataset_name = dataset_folder.stem\n",
+    "\n",
+    "dataset_B_lymphoma"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88006610-0187-4a4b-a286-f6feaef2805b",
+   "id": "135f85ce-157f-42f5-8025-0243d8906a51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_id = str(Path(\"_\".join(ct_folder.parts[-3:-1])))\n",
-    "frames_folder = Path(\"../data\") / image_id\n",
-    "frames_folder.mkdir(exist_ok=True)\n",
-    "print(frames_folder)"
+    "c = ct_paths[2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b164069c-c942-4563-a2e1-97609d59ad01",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "b9195197-37ff-4a6c-bf21-77110cb99e4d",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# NOTE: cannot be stopped after starting!\n",
-    "with ThreadPoolExecutor(max_workers=16) as e:\n",
-    "    for i in tqdm(range(*slice_range)):\n",
-    "        args = ct_array, seg_array, i, slice_range, frames_folder\n",
-    "        e.submit(plot_and_save, args)"
+    "patient = c.parts[-3]\n",
+    "study = c.parts[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b816a5b2-a0b9-44f4-8e21-c212000f5539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_frames_folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02f8b917-3112-41fa-a2b3-e1f3749f1006",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args = ct_array, seg_array, i, slice_range, \".\"\n",
+    "plot_and_save(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d0ebe64-306a-4fee-9e52-ef648b44d435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, ct_path in enumerate(ct_paths):\n",
+    "    # if i < 9:\n",
+    "    #     continue\n",
+    "    print(ct_path.parts[-3:])\n",
+    "    patient = ct_path.parts[-3]\n",
+    "    study = ct_path.parts[-2]\n",
+    "\n",
+    "    print(\n",
+    "        f\"[{i:03d}/{len(ct_paths)}] \"\n",
+    "        f\"Processing: {patient} {study}\"\n",
+    "    )\n",
+    "    \n",
+    "    scan_hash = ct_path.parent.parent.stem.split(\"_\")[1]\n",
+    "    print(scan_hash)\n",
+    "    continue\n",
+    "    seg_path = list(seg_folder.glob(f\"*{scan_hash}*\"))[0]\n",
+    "    \n",
+    "    # load data\n",
+    "    ct_img = sitk.ReadImage(ct_path)\n",
+    "    seg_img = sitk.ReadImage(seg_path)\n",
+    "    seg_img = sitk.Resample(seg_img, ct_img, sitk.Transform(), sitk.sitkNearestNeighbor, 0.0, seg_img.GetPixelID())\n",
+    "\n",
+    "    ct_array = sitk.GetArrayFromImage(ct_img)\n",
+    "    seg_array = sitk.GetArrayFromImage(seg_img)\n",
+    "\n",
+    "    slice_range, n_slices = get_slice_range(seg_array)\n",
+    "    \n",
+    "    # create frames folder\n",
+    "    ct_frames_folder = frames_folder / dataset_slice_name\n",
+    "    ct_frames_folder.mkdir(exist_ok=True)\n",
+    "\n",
+    "    break\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    print(f\"Generating {n_slices} frames\")\n",
+    "    # for i in tqdm(range(*slice_range)):\n",
+    "    #     args = ct_array, seg_array, i, slice_range, ct_frames_folder\n",
+    "    #     plot_and_save(args)\n",
+    "    with ThreadPoolExecutor(max_workers=16) as e:\n",
+    "        futures = []\n",
+    "        for i in range(*slice_range):\n",
+    "            args = ct_array, seg_array, i, slice_range, ct_frames_folder\n",
+    "            futures.append(e.submit(plot_and_save, args))\n",
+    "        wait(futures)\n",
+    "\n",
+    "    date_str = arrow.now().format(\"YYYY-MM-DD\")\n",
+    "    output_path = output_folder / f\"{dataset_slice_name}_video_{date_str}.mp4\"\n",
+    "\n",
+    "    print(f\"Creating video: {output_path.name}\")\n",
+    "    create_mp4(output_path, ct_frames_folder)\n",
+    "    print(f\"Video saved as {output_path}\")\n",
+    "    \n",
+    "    print(\"-\"*30)"
    ]
   },
   {
@@ -124,39 +193,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8783510a-6059-44ed-b3f2-98568aca7657",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ct_folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8f928ba-a92c-452e-9645-45ecdc4009e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from video_utils import create_mp4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "48021018-9e56-45b9-982e-ec5e15a0bb45",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import arrow\n",
-    "\n",
-    "output_folder = Path(\"../outputs/\")\n",
-    "date_str = arrow.now().format(\"YYYY-MM-DD\")\n",
-    "output_path = output_folder / f\"video{date_str}_{image_id}.mp4\"\n",
-    "\n",
-    "create_mp4(output_path, frames_folder)\n",
-    "print(f\"Video saved as {output_path}\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
