--- a/notebook/ct_video.ipynb
+++ b/notebook/ct_video.ipynb
@@ -32,16 +32,26 @@
     "from pathlib import Path\n",
     "\n",
     "import arrow\n",
-    "import nibabel as nib\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import SimpleITK as sitk\n",
     "\n",
     "from tqdm import tqdm\n",
-    "from skimage import measure\n",
     "\n",
     "from video_utils import create_mp4\n",
-    "from plot_utils import plot_contours, plot_text, plot_slice_full, get_slice_range, plot_and_save"
+    "from plot_utils import plot_contours, plot_text, plot_slice_full, get_slice_range, plot_and_save\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')  # so figures r not cached"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a30256cc-495d-4a6d-aa51-dee8030dd48e",
+   "metadata": {},
+   "source": [
+    "### Note\n",
+    "This code assumes there is 1 volume and 1 segmentation per subject. If there are more volumes per subject, keep only the one that's segmented (mentioned in the spreadsheet in the dataset)"
    ]
   },
   {
@@ -51,91 +61,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_folder = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/dataset B_lymphoma\")\n",
-    "seg_folder     = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/SEG_Lymphoma_B_Rifki-selected\")\n",
-    "frames_folder  = Path(\"../frames\")\n",
+    "dataset_folder = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/dataset C_lymphoma\")\n",
+    "seg_folder     = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/SEG_Lymphoma_C_Rifki-selected\")\n",
     "output_folder  = Path(\"../outputs\")\n",
+    "frames_folder  = output_folder / \"frames\"\n",
+    "videos_folder  = output_folder / \"videos\"\n",
     "\n",
     "ct_filename = \"CT.nii.gz\"\n",
     "ct_paths = list(dataset_folder.glob(f\"*/*/{ct_filename}\"))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a965c251-1679-44aa-8b57-a47e6ec06ab1",
+   "cell_type": "markdown",
+   "id": "ee70dbca-235f-480e-a5f5-1f1e360a5927",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dataset_name = dataset_folder.stem\n",
-    "\n",
-    "dataset_B_lymphoma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "135f85ce-157f-42f5-8025-0243d8906a51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = ct_paths[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9195197-37ff-4a6c-bf21-77110cb99e4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "patient = c.parts[-3]\n",
-    "study = c.parts[-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b816a5b2-a0b9-44f4-8e21-c212000f5539",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ct_frames_folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02f8b917-3112-41fa-a2b3-e1f3749f1006",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "args = ct_array, seg_array, i, slice_range, \".\"\n",
-    "plot_and_save(args)"
+    "## Generate video\n",
+    "Done concurrently, set the appropriate workers based on CPU cores "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6d0ebe64-306a-4fee-9e52-ef648b44d435",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "max_workers = 16\n",
+    "exists = True\n",
     "for i, ct_path in enumerate(ct_paths):\n",
-    "    # if i < 9:\n",
-    "    #     continue\n",
-    "    print(ct_path.parts[-3:])\n",
+    "    if \"2e97a9e5c2\" in str(ct_path):  # process will start after this\n",
+    "        exists = False\n",
+    "        continue\n",
+    "    if exists:\n",
+    "        continue\n",
+    "    \n",
+    "    dataset_name = ct_path.parts[-4]\n",
     "    patient = ct_path.parts[-3]\n",
     "    study = ct_path.parts[-2]\n",
     "\n",
     "    print(\n",
-    "        f\"[{i:03d}/{len(ct_paths)}] \"\n",
-    "        f\"Processing: {patient} {study}\"\n",
+    "        f\"[{i+1:03d}/{len(ct_paths)}] \"\n",
+    "        f\"Processing: {patient}/{study}\"\n",
     "    )\n",
     "    \n",
     "    scan_hash = ct_path.parent.parent.stem.split(\"_\")[1]\n",
-    "    print(scan_hash)\n",
-    "    continue\n",
     "    seg_path = list(seg_folder.glob(f\"*{scan_hash}*\"))[0]\n",
     "    \n",
     "    # load data\n",
@@ -149,27 +121,23 @@
     "    slice_range, n_slices = get_slice_range(seg_array)\n",
     "    \n",
     "    # create frames folder\n",
-    "    ct_frames_folder = frames_folder / dataset_slice_name\n",
-    "    ct_frames_folder.mkdir(exist_ok=True)\n",
+    "    video_name = f\"{patient}__{study}\"\n",
+    "    ct_frames_folder = frames_folder / dataset_name / video_name\n",
+    "    ct_frames_folder.mkdir(exist_ok=True, parents=True)\n",
     "\n",
-    "    break\n",
-    "\n",
-    "\n",
-    "    \n",
     "    print(f\"Generating {n_slices} frames\")\n",
     "    # for i in tqdm(range(*slice_range)):\n",
     "    #     args = ct_array, seg_array, i, slice_range, ct_frames_folder\n",
     "    #     plot_and_save(args)\n",
-    "    with ThreadPoolExecutor(max_workers=16) as e:\n",
+    "    with ThreadPoolExecutor(max_workers=max_workers) as e:\n",
     "        futures = []\n",
     "        for i in range(*slice_range):\n",
     "            args = ct_array, seg_array, i, slice_range, ct_frames_folder\n",
     "            futures.append(e.submit(plot_and_save, args))\n",
     "        wait(futures)\n",
-    "\n",
+    "        \n",
     "    date_str = arrow.now().format(\"YYYY-MM-DD\")\n",
-    "    output_path = output_folder / f\"{dataset_slice_name}_video_{date_str}.mp4\"\n",
-    "\n",
+    "    output_path = videos_folder / dataset_name / f\"{video_name}_video_{date_str}.mp4\"\n",
     "    print(f\"Creating video: {output_path.name}\")\n",
     "    create_mp4(output_path, ct_frames_folder)\n",
     "    print(f\"Video saved as {output_path}\")\n",
@@ -184,59 +152,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualize a slice\n",
+    "# visualize a single slice\n",
     "i = 1360\n",
     "fig = plot_slice_full(ct_array, seg_array, i, slice_range)\n",
     "fig.savefig(f\"test2.jpg\", bbox_inches='tight', pad_inches=0, dpi=180);"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48021018-9e56-45b9-982e-ec5e15a0bb45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "bc90838e-b782-4810-ac30-767ee2f8b091",
    "metadata": {},
    "source": [
-    "## Window/visualize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1590cf1f-311f-490d-8894-e7fcff836aff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define window settings\n",
-    "lung_window = {'center': -600, 'width': 1500}\n",
-    "abdomen_window = {'center': 40, 'width': 400}\n",
-    "\n",
-    "def apply_window(image, center, width):\n",
-    "    window_min = center - width // 2\n",
-    "    window_max = center + width // 2\n",
-    "    return np.clip(image, window_min, window_max)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3cf8516-7aa3-430f-9d8a-876dc3de0d19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Apply windowing\n",
-    "lung_ct = apply_window(ct_array, lung_window['center'], lung_window['width'])\n",
-    "abdomen_ct = apply_window(ct_array, abdomen_window['center'], abdomen_window['width'])\n",
-    "\n",
-    "# Normalize for display\n",
-    "lung_ct = (lung_ct - lung_ct.min()) / (lung_ct.max() - lung_ct.min())\n",
-    "abdomen_ct = (abdomen_ct - abdomen_ct.min()) / (abdomen_ct.max() - abdomen_ct.min())"
+    "## Window and visualize"
    ]
   },
   {
@@ -265,12 +192,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5363dc53-bf78-4dab-b625-c6507026d302",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Misc Scripts\n",
+    "## Rename files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33bf200f-729f-4306-9bff-de676183f3f8",
+   "id": "4adc343f-01a0-471e-b690-86c61593c67a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folder = Path(\"/home/liushifeng/Documents/GitHub/ctseg/outputs/dataset C_lymphoma/\")\n",
+    "folder_names = os.listdir(folder)\n",
+    "\n",
+    "for n in tqdm(folder_names):\n",
+    "    new_name = n.replace(\"dataset C_lymphoma__\", \"\").replace(\"dataset C_lymphoma-\", \"\")\n",
+    "    src = folder / n\n",
+    "    dst = folder / new_name\n",
+    "    os.rename(src, dst)"
+   ]
   }
  ],
  "metadata": {
