--- a/notebook/deeplesion_process.ipynb
+++ b/notebook/deeplesion_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0bb9643b-4354-4cb1-9632-d22fd9a6b1c2",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "71e31fc0-3ba6-4f11-beea-75e6a3bb1e57",
+   "metadata": {},
+   "source": [
+    "1. unzip png zip\n",
+    "2. get relevant slices\n",
+    "3. save them in compressed format (?)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b04eb6a-95e2-4f50-bc0c-8c53e8aa949b",
    "metadata": {},
    "outputs": [],
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4bb40a94-7805-42c4-a9ff-00ea1cca891f",
    "metadata": {},
    "outputs": [],
@@ -54,34 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6bf10728-80ec-41b5-b204-8af6bc81a1f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['scan_name'] = df['File_name'].str.split(\"_\").str[:-1].str.join(\"_\")\n",
     "df['file_name'] = df['File_name'].str.split(\"_\").str[-1]\n",
-    "df['image_path'] = df['scan_name'] + \"/\" + df['file_name']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "71e31fc0-3ba6-4f11-beea-75e6a3bb1e57",
-   "metadata": {},
-   "source": [
-    "1. unzip png zip\n",
-    "2. get relevant slices\n",
-    "3. save them in compressed format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8ba0f16-9cff-4ae6-bca9-629d8d4f9ed6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check length of string lists\n",
+    "df['image_path'] = df['scan_name'] + \"/\" + df['file_name']\n",
+    "\n",
     "df[\"Measurement_coordinates\"].str.split(\",\").apply(len).value_counts()\n",
     "df['Bounding_boxes'].str.split(\",\").apply(len).value_counts()"
    ]
@@ -174,20 +165,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c1b15e-0acd-4aeb-84b6-253cd7417a12",
+   "id": "18283d3f-dabf-4e8a-a5b3-72bb10405fe7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.open(\"/home/liushifeng/Desktop/DeepLesion Dataset/Images_png_55/Images_png/004263_01_01/236.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5609147b-6f0d-45fc-bec6-9f4ef3f855bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "img = Image.open(\"/home/liushifeng/Desktop/DeepLesion Dataset/Images_png_55/Images_png/004263_01_01/236.png\")\n",
     "img_hu = (np.array(img, dtype=int) - HU_FACTOR)"
    ]
   },
