add suv + refactor

--- a/notebook/ct_video.ipynb
+++ b/notebook/ct_video.ipynb
@@ -11,43 +11,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "17270778-df59-4846-b349-e29be5e0d3ad",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b8dea75-9d98-4309-b4b3-bff1f39dcab5",
    "metadata": {},
-   "outputs": [],
+   "cell_type": "code",
    "source": [
     "import os\n",
-    "from concurrent.futures import ThreadPoolExecutor, wait\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=SyntaxWarning)\n",
+    "\n",
     "from pathlib import Path\n",
+    "from concurrent.futures import ThreadPoolExecutor, wait\n",
     "\n",
     "import arrow\n",
-    "import numpy as np\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import SimpleITK as sitk\n",
-    "\n",
     "from tqdm import tqdm\n",
     "\n",
+    "from utils import check_multiple_cts\n",
     "from video_utils import create_mp4\n",
-    "from plot_utils import plot_contours, plot_text, plot_slice_full, get_slice_range, plot_and_save\n",
+    "from plot_utils import (\n",
+    "    plot_slice_full,\n",
+    "    plot_and_save,\n",
+    "    get_slice_range,\n",
+    ")\n",
     "\n",
-    "import matplotlib\n",
-    "matplotlib.use('Agg')  # so figures r not cached"
-   ]
+    "# matplotlib.use('Agg')  # Prevent figures from being cached"
+   ],
+   "id": "b651345bbc07f25a",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "id": "a30256cc-495d-4a6d-aa51-dee8030dd48e",
+   "id": "ab611f26ed2c8276",
    "metadata": {},
    "source": [
     "### Note\n",
@@ -55,108 +61,139 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37ec9b5f-87c9-42bc-8722-4bab0b62f5ed",
    "metadata": {},
-   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "dataset_folder = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/dataset C_lymphoma\")\n",
-    "seg_folder     = Path(\"/home/liushifeng/Desktop/AutoPET Lymphoma/SEG_Lymphoma_C_Rifki-selected\")\n",
-    "output_folder  = Path(\"../outputs\")\n",
-    "frames_folder  = output_folder / \"frames\"\n",
-    "videos_folder  = output_folder / \"videos\"\n",
+    "# input\n",
+    "project_folder = Path(\"/home/liushifeng/Desktop/AutoPET dataset\")\n",
+    "dataset_folder = project_folder / \"dataset B_melanoma\"\n",
+    "seg_folder = project_folder / \"SEG_Melanoma_B_Rifki\"\n",
     "\n",
+    "suv_filename = \"SUV.nii.gz\"\n",
     "ct_filename = \"CT.nii.gz\"\n",
-    "ct_paths = list(dataset_folder.glob(f\"*/*/{ct_filename}\"))"
-   ]
+    "ct_paths = list(dataset_folder.glob(f\"*/*/{ct_filename}\"))\n",
+    "check_multiple_cts(ct_paths)\n",
+    "\n",
+    "# output\n",
+    "output_folder = Path(\"../outputs\")\n",
+    "frames_folder = output_folder / \"frames\"\n",
+    "videos_folder = output_folder / \"videos\""
+   ],
+   "id": "5059b38865bc767b",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "id": "ee70dbca-235f-480e-a5f5-1f1e360a5927",
+   "id": "98127ed26775ac29",
    "metadata": {},
    "source": [
     "## Generate video\n",
-    "Done concurrently, set the appropriate workers based on CPU cores "
+    "Done concurrently, set the appropriate workers based on CPU cores"
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d0ebe64-306a-4fee-9e52-ef648b44d435",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
    "source": [
-    "max_workers = 16\n",
+    "# for testing\n",
+    "%matplotlib inline\n",
+    "plot_slice_full(ct_array, seg_array, suv_array, 300);"
+   ],
+   "id": "26c88a16f442c5a9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "max_workers = 31\n",
     "exists = True\n",
+    "matplotlib.use('Agg');\n",
+    "\n",
     "for i, ct_path in enumerate(ct_paths):\n",
-    "    if \"2e97a9e5c2\" in str(ct_path):  # process will start after this\n",
+    "    if \"PETCT_d65cf203be\" in str(ct_path):  # process will start after this\n",
     "        exists = False\n",
     "        continue\n",
     "    if exists:\n",
     "        continue\n",
-    "    \n",
+    "\n",
+    "    # path manipulation\n",
     "    dataset_name = ct_path.parts[-4]\n",
     "    patient = ct_path.parts[-3]\n",
     "    study = ct_path.parts[-2]\n",
+    "    print(f\"[{i + 1:03d}/{len(ct_paths)}] Processing: {patient}/{study}\")\n",
     "\n",
-    "    print(\n",
-    "        f\"[{i+1:03d}/{len(ct_paths)}] \"\n",
-    "        f\"Processing: {patient}/{study}\"\n",
-    "    )\n",
-    "    \n",
     "    scan_hash = ct_path.parent.parent.stem.split(\"_\")[1]\n",
     "    seg_path = list(seg_folder.glob(f\"*{scan_hash}*\"))[0]\n",
-    "    \n",
+    "    suv_path = ct_path.parent / suv_filename\n",
+    "\n",
     "    # load data\n",
     "    ct_img = sitk.ReadImage(ct_path)\n",
+    "    suv_img = sitk.ReadImage(suv_path)\n",
     "    seg_img = sitk.ReadImage(seg_path)\n",
+    "    suv_img = sitk.Resample(suv_img, ct_img, sitk.Transform(), sitk.sitkLinear, 0.0, suv_img.GetPixelID())\n",
     "    seg_img = sitk.Resample(seg_img, ct_img, sitk.Transform(), sitk.sitkNearestNeighbor, 0.0, seg_img.GetPixelID())\n",
     "\n",
     "    ct_array = sitk.GetArrayFromImage(ct_img)\n",
+    "    suv_array = sitk.GetArrayFromImage(suv_img)\n",
     "    seg_array = sitk.GetArrayFromImage(seg_img)\n",
     "\n",
     "    slice_range, n_slices = get_slice_range(seg_array)\n",
-    "    \n",
+    "\n",
     "    # create frames folder\n",
     "    video_name = f\"{patient}__{study}\"\n",
     "    ct_frames_folder = frames_folder / dataset_name / video_name\n",
     "    ct_frames_folder.mkdir(exist_ok=True, parents=True)\n",
     "\n",
+    "    # create videos folder\n",
+    "    date_str = arrow.now().format(\"YYYY-MM-DD\")\n",
+    "    dataset_video_path = videos_folder / dataset_name\n",
+    "    dataset_video_path.mkdir(exist_ok=True, parents=True)\n",
+    "    output_path = dataset_video_path / f\"{video_name}_video_{date_str}.mp4\"\n",
+    "\n",
     "    print(f\"Generating {n_slices} frames\")\n",
+    "    # # no concurrency\n",
     "    # for i in tqdm(range(*slice_range)):\n",
     "    #     args = ct_array, seg_array, i, slice_range, ct_frames_folder\n",
     "    #     plot_and_save(args)\n",
     "    with ThreadPoolExecutor(max_workers=max_workers) as e:\n",
     "        futures = []\n",
     "        for i in range(*slice_range):\n",
-    "            args = ct_array, seg_array, i, slice_range, ct_frames_folder\n",
+    "            args = ct_array, seg_array, suv_array, i, ct_frames_folder\n",
     "            futures.append(e.submit(plot_and_save, args))\n",
     "        wait(futures)\n",
-    "        \n",
-    "    date_str = arrow.now().format(\"YYYY-MM-DD\")\n",
-    "    output_path = videos_folder / dataset_name / f\"{video_name}_video_{date_str}.mp4\"\n",
-    "    print(f\"Creating video: {output_path.name}\")\n",
+    "\n",
+    "    print(f\"Creating video: {output_path.name} from\")\n",
     "    create_mp4(output_path, ct_frames_folder)\n",
     "    print(f\"Video saved as {output_path}\")\n",
-    "    \n",
-    "    print(\"-\"*30)"
-   ]
+    "    print(\"-\" * 30)"
+   ],
+   "id": "998aee0375adc591",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe1c53d2-276c-4064-b9d3-ba62bb238dac",
    "metadata": {},
+   "cell_type": "code",
+   "source": "os.listdir(\"../outputs/\")",
+   "id": "1013cc5481fb320c",
    "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "# visualize a single slice\n",
-    "i = 1360\n",
+    "i = 880\n",
     "fig = plot_slice_full(ct_array, seg_array, i, slice_range)\n",
-    "fig.savefig(f\"test2.jpg\", bbox_inches='tight', pad_inches=0, dpi=180);"
-   ]
+    "# fig.savefig(f\"test2.jpg\", bbox_inches='tight', pad_inches=0, dpi=180);"
+   ],
+   "id": "49b39486e0344e2c",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -168,10 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "9472b4cc-2328-4695-8d93-8f2de8e46d5a",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Select a slice for visualization (e.g., middle slice)\n",
     "slice_idx = 1360\n",
@@ -189,7 +224,9 @@
     "ax2.set_title('Abdomen Window with Segmentation Overlay')\n",
     "\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -203,10 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "4adc343f-01a0-471e-b690-86c61593c67a",
    "metadata": {},
-   "outputs": [],
    "source": [
     "folder = Path(\"/home/liushifeng/Documents/GitHub/ctseg/outputs/dataset C_lymphoma/\")\n",
     "folder_names = os.listdir(folder)\n",
@@ -216,7 +251,9 @@
     "    src = folder / n\n",
     "    dst = folder / new_name\n",
     "    os.rename(src, dst)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
@@ -235,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
