--- a/notebook/ct_video.ipynb
+++ b/notebook/ct_video.ipynb
@@ -21,6 +21,19 @@
    "execution_count": null
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-24T10:03:46.549386Z",
+     "start_time": "2025-01-24T10:03:46.131437Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "16fda53a79ed94f1",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "source": [
@@ -38,7 +51,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "from utils import check_multiple_cts\n",
-    "from video_utils import create_mp4\n",
+    "from utils.video import create_mp4\n",
     "from plot_utils import (\n",
     "    plot_slice_full,\n",
     "    plot_and_save,\n",
