--- a/evaluation/uls_3d.ipynb
+++ b/evaluation/uls_3d.ipynb
@@ -93,30 +93,6 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# from utils.plot import window_ct\n",
-    "# from eval_utils import plot_seg, get_start_end_slice\n",
-    "#\n",
-    "# start, end = get_start_end_slice(seg_array, margin=1)\n",
-    "#\n",
-    "# for i in range(start, end + 1):\n",
-    "#     ct_slice = ct_array[i, :, :]\n",
-    "#     seg_slice = seg_array[i, :, :]\n",
-    "#\n",
-    "#     if ct_slice.min() == ct_slice.max():\n",
-    "#         continue\n",
-    "#\n",
-    "#     lung, abdomen = window_ct(ct_slice)\n",
-    "#     plot_seg(abdomen, seg_slice)\n",
-    "#     plt.show()"
-   ],
-   "id": "32f7fe57a6418a3b",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
    "cell_type": "markdown",
    "source": "### Batch Eval",
    "id": "bcacbf0ebe56e880"
@@ -125,19 +101,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "github = Path(\"/home/liushifeng/Documents/GitHub/\")\n",
+    "pred_folder = Path(\"/home/liushifeng/Documents/GitHub/MedSAM/experiments/outputs/extend_3d/ULS_full_10Feb2025\")  # ULS_windowed_10Feb2025, ULS_full_10Feb2025\n",
+    "gt_folder = Path(\"/media/liushifeng/KINGSTON/ULS Jan 2025/ULS23/novel_data/ULS23_DeepLesion3D/labels/\")\n",
     "\n",
-    "pred_folder = github / Path(\"MedSAM/experiments/outputs/extend_3d/ULS_up_down/\")\n",
-    "gt_folder = github / \"ULS23/annotations/ULS23/novel_data/ULS23_DeepLesion3D/labels/\""
-   ],
-   "id": "e22f42d941c4939f",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
     "results = []\n",
     "for pred in tqdm(os.listdir(pred_folder)):\n",
     "    lesion_name = pred.replace(\"_pred.nrrd\", \"\")\n",
@@ -147,7 +113,8 @@
     "    res['lesion_name'] = lesion_name\n",
     "    results.append(res)\n",
     "\n",
-    "df = pd.DataFrame(results).set_index('lesion_name')"
+    "# df_win = pd.DataFrame(results).set_index('lesion_name')\n",
+    "df_full = pd.DataFrame(results).set_index('lesion_name')"
    ],
    "id": "69d80f82e28713f1",
    "outputs": [],
@@ -157,8 +124,27 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "df_win['group'] = \"windowed\"\n",
+    "df_full['group'] = \"full\""
+   ],
+   "id": "c178bc2bb4058fbf",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df = pd.concat([df_win, df_full]).copy()",
+   "id": "b1b888aaab5040b1",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "# save\n",
-    "df.to_csv(\"medsam_extend3d_results.csv\")"
+    "df.to_csv(\"medsam_extend3d_full_vs_win_results_250.csv\")"
    ],
    "id": "ae44587fdc30f838",
    "outputs": [],
@@ -175,12 +161,11 @@
    "cell_type": "code",
    "source": [
     "import seaborn as sns\n",
-    "sns.set_context('paper')\n",
+    "sns.set_context(\"paper\", font_scale=1.2)\n",
     "sns.set_style('darkgrid')\n",
     "\n",
-    "\n",
     "# load\n",
-    "df = pd.read_csv(\"medsam_extend3d_results.csv\", index_col=\"lesion_name\")\n",
+    "df = pd.read_csv(\"medsam_extend3d_full_vs_win_results_250.csv\", index_col=\"lesion_name\")\n",
     "\n",
     "# add categories\n",
     "df['dice_cat'] = \"high\"\n",
@@ -194,19 +179,24 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df.head()",
-   "id": "98b2309961604fe0",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
     "# remove some outliers\n",
-    "df_viz = df[df.gt_volume.lt(1e4)]"
+    "df = df[df.gt_volume.lt(1e4)]\n",
+    "dfm = pd.melt(df.reset_index(),\n",
+    "    id_vars=['lesion_name', 'group'],\n",
+    "    value_vars=['dice', 'volume_similarity', 'iou'],\n",
+    "    var_name='metric_type',\n",
+    "    value_name='metric_value')"
    ],
-   "id": "8be153c4ac502d5b",
+   "id": "613a22207a92bb55",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df[['dice', 'volume_similarity', 'iou', 'group']].groupby(\"group\").agg([\"median\", \"mean\"]).round(2)",
+   "id": "4602e90d84888c00",
    "outputs": [],
    "execution_count": null
   },
@@ -214,10 +204,27 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# show breakdown of these 2 columns\n",
-    "df[['dice', 'volume_similarity']].describe().round(2)"
+    "sns.catplot(\n",
+    "    dfm, y=\"metric_value\", x=\"group\", hue=\"group\",\n",
+    "    kind=\"box\", col=\"metric_type\",\n",
+    "    aspect=0.7, height=4,\n",
+    ");"
    ],
-   "id": "6d438c55abc32e12",
+   "id": "5ac810d621c3493f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sns.catplot(\n",
+    "    dfm, y=\"metric_value\", x=\"group\", hue=\"group\",\n",
+    "    kind=\"bar\", col=\"metric_type\",\n",
+    "    aspect=0.7, height=4,\n",
+    ");"
+   ],
+   "id": "77c708854adc337",
    "outputs": [],
    "execution_count": null
   },
