--- a/notebook/2d_box_seg.ipynb
+++ b/notebook/2d_box_seg.ipynb
@@ -79,10 +79,17 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "ignored_train_samples = [\n",
+    "ignored_train_samples = [x.strip() for x in\n",
     "    \"\"\"\n",
-    "    \"\"\"\n",
-    "]"
+    "    000148_04_01_034_lesion_01\n",
+    "    003287_01_01_188_lesion_01\n",
+    "    003931_01_01_078_lesion_01\n",
+    "    000026_06_01_257_lesion_01\n",
+    "    000346_01_01_085_lesion_01\n",
+    "    000215_05_01_096_lesion_01\n",
+    "    001354_04_02_305_lesion_01\n",
+    "    001564_02_02_513_lesion_01\n",
+    "    \"\"\".split(\"\\n\") if x.strip()]"
    ],
    "id": "cd4a56b7eb04c589",
    "outputs": [],
@@ -96,19 +103,7 @@
     "\n",
     "qc_filenames = [x.strip() for x in\n",
     "    \"\"\"\n",
-    "    003463_01_01_598_lesion_01\n",
-    "    000252_10_01_026_lesion_01\n",
-    "    000215_05_01_096_lesion_01\n",
-    "    000482_02_01_099_lesion_01\n",
-    "    000532_02_01_102_lesion_01\n",
-    "    000575_03_01_049_lesion_01\n",
-    "    000859_01_01_117_lesion_01\n",
-    "    000879_03_01_054_lesion_01\n",
-    "    001107_07_01_119_lesion_01\n",
-    "    001124_08_01_040_lesion_01\n",
-    "    002083_02_01_062_lesion_01\n",
-    "    000117_04_01_080_lesion_01\n",
-    "    000346_01_01_085_lesion_01\n",
+    "001564_02_02_513_lesion_01\n",
     "    \"\"\".split(\"\\n\") if x.strip()]\n",
     "\n",
     "# for filename in list(seg_paths.keys()):\n",
@@ -149,7 +144,7 @@
     "        seg_slice_crop = seg_slice[crop_bbox[1]:crop_bbox[3]+1, crop_bbox[0]:crop_bbox[2]+1]\n",
     "        _, axes = plt.subplots(1, 2, figsize=(10, 5))\n",
     "\n",
-    "        vmin, vmax = -200, 200\n",
+    "        vmin, vmax = 200, 700\n",
     "        axes[0].imshow(ct_slice_crop,\n",
     "                       vmin=vmin, vmax=vmax,\n",
     "                       cmap='gray')\n",
